Bug 309453 - Anonymization doesn't apply to report and budget names and report comments
Summary: Anonymization doesn't apply to report and budget names and report comments
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-02 23:48 UTC by mahead
Modified: 2012-12-26 14:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mahead 2012-11-02 23:48:12 UTC
When using anonymization functionality the report and budget names are left as they are originally. This affects also report comments.

Reproducible: Always

Steps to Reproduce:
1. Open any existing KMyMoney document. Make sure there are some custom reports and budgets.
2. Save the file as anonymous mode.

Actual Results:  
Report and budget names and report comments remain as they were.

Expected Results:  
Report and budget names and report comments are anonymized like everything else.

I used "major" severity, since this may expose some sensitive information without user knowing it before it's too late.
Comment 1 Thomas Baumgart 2012-12-26 14:34:55 UTC
Git commit a6cb6feb8512385f21dd9b662579ff3b908f7a3a by Thomas Baumgart.
Committed on 26/12/2012 at 15:33.
Pushed by tbaumgart into branch 'master'.

Hide/remove sensitive information from anon file

M  +10   -1    kmymoney/mymoney/storage/mymoneystorageanon.cpp
M  +3    -0    kmymoney/mymoney/storage/mymoneystorageanon.h
M  +6    -1    kmymoney/mymoney/storage/mymoneystoragexml.cpp
M  +1    -0    kmymoney/mymoney/storage/mymoneystoragexml.h

http://commits.kde.org/kmymoney/a6cb6feb8512385f21dd9b662579ff3b908f7a3a
Comment 2 Thomas Baumgart 2012-12-26 14:41:41 UTC
Git commit ce4ffe14d522a87bbe6b394dab943cd7b8660044 by Thomas Baumgart.
Committed on 26/12/2012 at 15:33.
Pushed by tbaumgart into branch '4.6'.

Hide/remove sensitive information from anon file
(cherry picked from commit a6cb6feb8512385f21dd9b662579ff3b908f7a3a)

M  +10   -1    kmymoney/mymoney/storage/mymoneystorageanon.cpp
M  +3    -0    kmymoney/mymoney/storage/mymoneystorageanon.h
M  +6    -1    kmymoney/mymoney/storage/mymoneystoragexml.cpp
M  +1    -0    kmymoney/mymoney/storage/mymoneystoragexml.h

http://commits.kde.org/kmymoney/ce4ffe14d522a87bbe6b394dab943cd7b8660044