Hide/remove sensitive information from anon file

BUG: 309453